--- a/index.html
+++ b/index.html
@@ -1,32 +1,93 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/styles/default.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/styles/default.css" />
     <title>Selangkah-Lebih</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <div class="left_block">
-            <img src="assets/images/background.jpg" alt="">
-            <div class="text">
-                <h2 class="title">Selangkah Lebih Dekat Dengan Impianmu</h2>
-                <p class="main_text">Sebuah layanan E-Learning gratis yang siap membantumu menjadi seorang ahil</p>
-            </div>
+      <div class="left_block">
+        <img
+          id="right_block_image"
+          src="assets/images/background.jpg"
+          alt="background.jpg"
+        />
+        <div class="text">
+          <h2 class="title">Selangkah Lebih Dekat Dengan Impianmu</h2>
+          <p class="main_text">
+            Sebuah layanan E-Learning gratis yang siap membantumu menjadi
+            seorang ahil
+          </p>
         </div>
-        
-        <div class="right_block">
-            <div class="left_block_text">
-                <h2>Login</h2>
-                <p>Persiapkan diri untuk masa depan yang penuh dengan bintang</p>
-            </div>
-            <input type="email">
-            <input type="password">
-            <p>simpan info masuk</p>
-            <button class="button">MASUK</button>
-            <p class="help">Sudah punya akun? Dagtar</p>
+      </div>
+
+      <div id="right_block_LogIn">
+        <div class="right_block_margin">
+          <div class="right_block_text">
+            <h2 class="login">Login</h2>
+            <p class="Persiapkan">
+              Persiapkan diri untuk masa depan yang penuh dengan bintang
+            </p>
+          </div>
+
+          <input type="email" class="uinfo" id="email" placeholder="Email" />
+
+          <input
+            type="password"
+            class="uinfo"
+            id="password"
+            placeholder="Pas*****"
+          />
+
+          <p class="text_of_checkbox">
+            <input class="checkbox" type="checkbox" />simpan info masuk
+          </p>
+
+          <button class="button">MASUK</button>
+          <p class="help">Sudah punya akun? <span class="link">Dagtar</span></p>
         </div>
+      </div>
+
+      <div id="right_block_Register">
+        <div class="right_block_margin">
+          <div class="right_block_text">
+            <h2 class="login">Register</h2>
+            <p class="Persiapkan">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor?
+            </p>
+          </div>
+
+          <input type="email" class="uinfo" id="email" placeholder="Email" />
+
+          <input
+            type="password"
+            class="uinfo"
+            id="password"
+            placeholder="Pas*****"
+          />
+
+          <input
+            type="password"
+            class="uinfo"
+            id="conifurm_password"
+            placeholder="Conifurm password"
+          />
+
+          <input type="text" class="uinfo" id="name" placeholder="Name" />
+
+          <input type="text" class="uinfo" id="surname" placeholder="Surname" />
+
+          <p class="text_of_checkbox">
+            <input class="checkbox" type="checkbox" />simpan info masuk
+          </p>
+
+          <button class="button">MASUK</button>
+          <p class="help">Sudah punya akun? <span class="link">Dagtar</span></p>
+        </div>
+      </div>
     </div>
-</body>
+    <script src="assets/js/script.js"></script>
+  </body>
 </html>
