Creating new Background, new Font Color and Backend logic

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Selangkah-Lebih</title>
   </head>
   <body>
+
     <div class="container">
+
       <div class="left_block">
         <img
           id="right_block_image"
@@ -23,6 +25,8 @@
         </div>
       </div>
 
+      <!--==========LOGIN==========-->
+
       <div id="right_block_LogIn">
         <div class="right_block_margin">
           <div class="right_block_text">
@@ -32,12 +36,13 @@
             </p>
           </div>
 
-          <input type="email" class="uinfo" id="email" placeholder="Email" />
+          <input type="email" class="uinfo"
+          id="LogIn_email" placeholder="Email" />
 
           <input
             type="password"
             class="uinfo"
-            id="password"
+            id="LogIn_password"
             placeholder="Pas*****"
           />
 
@@ -46,10 +51,12 @@
           </p>
 
           <button class="button">MASUK</button>
-          <p class="help">Sudah punya akun? <span class="link">Dagtar</span></p>
+          <p class="help">Sudah punya akun? <span class="link">Register</span></p>
         </div>
       </div>
 
+
+      <!--==========REGISTER==========-->
       <div id="right_block_Register">
         <div class="right_block_margin">
           <div class="right_block_text">
@@ -59,34 +66,37 @@
             </p>
           </div>
 
-          <input type="email" class="uinfo" id="email" placeholder="Email" />
+          <input type="email" class="uinfo"
+          id="Register_email" placeholder="Email" />
 
           <input
-            type="password"
-            class="uinfo"
-            id="password"
-            placeholder="Pas*****"
+            type="password" class="uinfo"
+             id="Register_password" placeholder="Pas*****"
           />
 
           <input
             type="password"
             class="uinfo"
-            id="conifurm_password"
+            id="Register_conifurm_password"
             placeholder="Conifurm password"
           />
 
-          <input type="text" class="uinfo" id="name" placeholder="Name" />
+          <input type="text" class="uinfo"
+          id="Register_name" placeholder="Name" />
 
-          <input type="text" class="uinfo" id="surname" placeholder="Surname" />
+          <input type="text" class="uinfo"
+          id="Register_surname" placeholder="Surname" />
 
           <p class="text_of_checkbox">
             <input class="checkbox" type="checkbox" />simpan info masuk
           </p>
 
           <button class="button">MASUK</button>
-          <p class="help">Sudah punya akun? <span class="link">Dagtar</span></p>
+          <p class="help">Sudah punya akun? <span class="link">Sign in</span></p>
         </div>
       </div>
+
+
     </div>
     <script src="assets/js/script.js"></script>
   </body>
