Creating logic of LogIn and final LayOut of site

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
           />
 
           <p class="text_of_checkbox">
-            <input class="checkbox" type="checkbox" />simpan info masuk
+            <input class="checkbox" type="checkbox"
+            id="LogIn_checkbox"/>simpan info masuk
           </p>
 
           <button class="button">MASUK</button>
@@ -86,10 +87,6 @@
 
           <input type="text" class="uinfo"
           id="Register_surname" placeholder="Surname" />
-
-          <p class="text_of_checkbox">
-            <input class="checkbox" type="checkbox" />simpan info masuk
-          </p>
 
           <button class="button">MASUK</button>
           <p class="help">Sudah punya akun? <span class="link">Sign in</span></p>
